product: add categories and sub categories to centoire sections
